--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -22,5 +22,5 @@ jobs:
             spark-version: '3.5.0'
             hadoop-version: '3'
         
-        - run: spark-submit test.py
+        - run: spark-submit pyspark-tests.py
     
